--- a/style/camScan.css
+++ b/style/camScan.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     background: #000;
     overflow: hidden;
-    font-family: sans-serif;
+    font-family: 'Prompt', sans-serif;
 }
 
 /* Video full screen */
